--- a/services/predict-model/main_app/templates/index.html
+++ b/services/predict-model/main_app/templates/index.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bouton avec Bootstrap</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-<h1> coucou</h1>
+<body class="d-flex justify-content-center align-items-center vh-100" style="background-color: #333;">    <div class="text-center">
+        <button class="btn btn-lg btn-warning" type="button" data-bs-toggle="collapse" data-bs-target="#message" aria-expanded="false" aria-controls="message">
+            Voir mes graphiques
+        </button>
+        <div class="collapse mt-3" id="message">
+            <div class="alert alert-success">
+                beautiful Graphic
+            </div>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
