--- a/services/predict-model/main_app/templates/index.html
+++ b/services/predict-model/main_app/templates/index.html
@@ -7,13 +7,38 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="d-flex justify-content-center align-items-center vh-100" style="background-color: #333;">    <div class="text-center">
-        <button class="btn btn-lg btn-warning" type="button" data-bs-toggle="collapse" data-bs-target="#message" aria-expanded="false" aria-controls="message">
-            Voir mes graphiques
-        </button>
-        <div class="collapse mt-3" id="message">
-            <div class="alert alert-success">
-                beautiful Graphic
+<body style="background-color: #333;">
+
+    <!-- Barre de navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">CryptoBot</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Contenu central -->
+    <div class="d-flex justify-content-center align-items-center vh-100 text-center text-white">
+        <div>
+            <div class="d-flex gap-3 justify-content-center">
+                <button class="btn btn-lg btn-warning w-auto" type="button" data-bs-toggle="collapse" data-bs-target="#message" aria-expanded="false" aria-controls="message">
+                    Voir mes graphiques
+                </button>
+                <a class="btn btn-lg btn-outline-warning w-auto" href="{% url 'profile' %}">Profile</a>
+            </div>
+            <div class="collapse mt-3" id="message">
+                <iframe src="http://localhost:8501" width="1300px" height="650px" style="border:none;">
+                    Your browser does not support iframes.
+                </iframe>
             </div>
         </div>
     </div>
